# rdk_imu_module

./: CMakeLists.txt  README.MD  README_cn.md  package.xml
config/: rdk_imu_node_default_params.yaml
include/rdk_imu_module/: bmi088_regs.h  rdk_imu_data_node.hpp  rdk_imu_module.h
src/: main.cpp  rdk_imu_data_node.cpp  rdk_imu_module_data.c
